initiation du projet ,creation des models et ajouts des annotations et ajout relation @OneToone et @ManyToOne et compilation du projet tous ces bien passer jusquà la bd

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+##specifier les elements de connexions a la base de donnee
+spring.datasource.url=jdbc:mysql://localhost:3306/gestionStock
+spring.datasource.username=root
+spring.datasource.password= 
+driver-class-name:com.mysql.cj.jdbc.Driver
+
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+# permet de preciser ce que l'on veut faire lorsqu'on demarre l'application
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+
+##specifier le port a utiliser
+spring.jpa.server.port=8081
+
+##specifier explicitement quel SGBD on va utiliser
+spring.jpa.database=MYSQL
+##on ne veut pas afficher les requetes sql lorsq'on envoi des requetes a l'appli
+spring.jpa.show-sql=false 
 
