--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ##specifier les elements de connexions a la base de donnee
-spring.datasource.url=jdbc:mysql://localhost:3306/gestionStock
+spring.datasource.url=jdbc:mysql://localhost:3306/gestiondestock
 spring.datasource.username=root
 spring.datasource.password= 
 driver-class-name:com.mysql.cj.jdbc.Driver
