--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.jpa.database=MYSQL
 ##on ne veut pas afficher les requetes sql lorsq'on envoi des requetes a l'appli
 spring.jpa.show-sql=false 
 
+flickr.apiKey =017a6e5f4211951fa60cb4f71d257a8e
+flickr.apiSecret=218939f9b9f1d420
+flickr.appiKey=72157720861906739-8a3e3e785b8398ce
+flickr.appiSecret=72157720861906739-8a3e3e785b8398ce
