--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+	<dependency>
+  <groupId>com.flickr4java</groupId>
+  <artifactId>flickr4java</artifactId>
+  <version>3.0.6</version>
+</dependency>
+
+	
+	
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -57,6 +65,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	
 
 	<build>
 		<plugins>
